--- a/04code/crazy-html5/02element-property/2-2-2.html
+++ b/04code/crazy-html5/02element-property/2-2-2.html
@@ -5,30 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>2-1-7</title>
-    <style>
-        table {
-            background-color: black;
-            border: 1px solid green;
-            border-collapse: collapse;
-        }
-
-        table>colgroup {
-            background-color: white;
-        }
-    </style>
+    <title>2.2.2designMode属性</title>
+    <!-- 全局的contenteditable属性 -->
 </head>
 
 <body>
     <div>
-        <table>
+        <p>我们都是坏孩子，哇哈哈哈</p>
+        <ul>
+            <li>孙悟空</li>
+            <li>糯扎</li>
+            <li>风扇演义</li>
+        </ul>
+        <table border id="stblTable">
             <caption>师徒部落通讯录</caption>
-            <colgroup>
-                <col>
-                <col>
-                <col>
-                <col>
-            </colgroup>
             <thead>
                 <tr>
                     <th>编号</th>
@@ -50,19 +40,14 @@
                     <td>广州</td>
                 </tr>
             </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="2">师徒部落</td>
-                    <td>19000</td>
-                    <td>师徒</td>
-                </tr>
-            </tfoot>
         </table>
     </div>
 
-
+    <script>
+        window.onload = function() {
+            document.designMode = "on";
+        };
+    </script>
 </body>
-
-</html>
 
 </html>
